# RisKtx2

./: .gitignore  CHANGELOG.md  README.md  RisKtx2.slnx
.github/workflows/: preview.yml  release.yml
RisKtx2/: KtxException.cs  KtxTexture2.cs  RisKtx2.csproj  TranscodeFormat.cs
RisKtx2.Managed/RisKtx2/: RisKtx2.slnx
RisKtx2.Managed/RisKtx2/.github/workflows/: preview.yml  release.yml
RisKtx2.Managed/RisKtx2/RisKtx2/: CHANGELOG.md  CompressedBlockSize.cs  Enums.cs  Ktx2Loader.cs  Ktx2Texture.cs  KtxAstcParams.cs  KtxBasisParams.cs  KtxConstants.cs  KtxPackAstcBlockDimension.cs  KtxPackAstcQualityLevels.cs  KtxTextureCreateInfo.cs  KtxTranscodeFormat.cs  RisKtx2.csproj  StbImage.cs  StbImageLoader.cs  SuperCompressionScheme.cs
RisKtx2.Managed/RisKtx2/RisKtx2.Examples.OpenTK/: Game.cs  Program.cs  RisKtx2.Examples.OpenTK.csproj
RisKtx2.Managed/RisKtx2/RisKtx2.Examples.SilkNet.WebGPU/: Program.cs  RisKtx2.Examples.SilkNet.WebGPU.csproj  test.ktx2
RisKtx2.Managed/RisKtx2/RisKtx2.Tests/: Constants.cs  KtxTextureTest.cs  RisKtx2.Tests.csproj  StbImageLoaderTest.cs
RisKtx2.Managed/RisKtx2/RisKtx2.Tests/Data/: test_basis_uastc.ktx2
RisKtx2.Managed/RisKtx2/RisKtx2/Native/: NativeResolver.cs  NativeStbImage.cs  RisKtx2.cs  StbImage.cs
RisKtx2.Native/: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  library.cpp  vcpkg.json
RisKtx2.Native/cmake/: CopyTestFiles.cmake  VcpkgDependencies.cmake  VcpkgTestDependencies.cmake
RisKtx2.Native/cmake-release-debugvisualstudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ris_ktx2.sln  ris_ktx2.vcxproj  ris_ktx2.vcxproj.filters  ris_ktx2_tests.vcxproj  ris_ktx2_tests.vcxproj.filters
RisKtx2.Native/include/: c_ktx.hpp  c_ktx_ai_generated.hpp  c_stb_image.h  macros.hpp  ris_ktx.hpp  ris_ktxAstcParams.hpp  ris_ktxBasisParams.hpp  ris_ktxTextureCreateInfo.hpp  ris_ktx_logging.hpp  ris_stb_image.h
RisKtx2.Native/scripts/: build_linux.sh  build_linux.template.sh  build_linux_arm.sh  build_linux_arm.template.sh  build_macos.sh  build_macos_release.sh  build_windows.ps1  build_windows.template.ps1  build_windows_arm.ps1  build_windows_arm.template.ps1  build_windows_debug.ps1
RisKtx2.Native/src/: c_ktx.cpp  c_stb_image.cpp  ris_ktx.cpp  ris_ktx_logging.cpp  ris_stb_image.cpp
RisKtx2.Native/test_files/: output_basis_uastc.ktx2  test_basis_uastc.ktx2
RisKtx2.Native/tests/: c_ktx_ai_generated_tests.cpp  c_ktx_tests.cpp  c_ktx_universal_basis_tests.cpp  ris_ktx_astc_tests.cpp  ris_ktx_edge_case_tests.cpp  ris_ktx_tests.cpp  ris_ktx_universal_basis_tests.cpp  test_utilities.cpp  test_utilities.hpp
RisKtx2/Interop/: Native.cs
RisKtx2Native/: CMakeLists.txt
RisKtx2Native/include/: RisKtx2Native.h
RisKtx2Native/src/: RisKtx2Native.cpp
